# lxqt-uwsm-session

./: LICENSE  README.md  meson-install-overrides.sh  meson.build  meson.options
systemd/user/: lxqt-desktop.service  lxqt-globalkeyshortcuts.service  lxqt-notifications.service  lxqt-panel.service  lxqt-policykit-agent.service  lxqt-powermanagement.service  lxqt-runner.service  lxqt-xscreensaver-autostart.service  meson.build
systemd/user/app-lxqt\x2ddesktop@autostart.service.d/: override.conf
systemd/user/app-lxqt\x2dpowermanagement@autostart.service.d/: override.conf
uwsm/: env-lxqt  meson.build
wayland-sessions/: lxqt-hyprland-uwsm.desktop  lxqt-kwin-wayland-uwsm.desktop  lxqt-labwc-uwsm.desktop  lxqt-miriway-uwsm.desktop  lxqt-niri-uwsm.desktop  lxqt-river-uwsm.desktop  lxqt-sway-uwsm.desktop  lxqt-wayfire-uwsm.desktop  meson.build
